<resources>
    <string name="app_name">FoodZone</string>
    <string name="from_atul">from Atul</string>
    <string name="enter_registered_mobile_number_here">Enter registered Mobile Number here</string>
    <string name="enter_password_here_min_4_characters">Enter Password Here(min. 4 characters)</string>
    <string name="enter_your_password_here">Enter your Password Here</string>
    <string name="login">Login</string>
    <string name="not_an_existing_user_sign_up_here">Not an existing User? Sign Up Here</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_name_min_3_char">Enter Your Name(Min. 3 Char.)</string>
    <string name="create_password_min_4_char">Create Password(min. 4 Char.)</string>
    <string name="enter_delivery_address">Enter Delivery Address</string>
    <string name="enter_your_mobile_number">Enter Your Mobile number</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="register">Register</string>
    <string name="preference_name">Shared Preferences</string>
    <string name="enter_the_registered_mobile_number_and_the_registered_email_id_in_the_respective_blocks">Enter the registered Mobile Number and the registered Email ID in the respective blocks :</string>
    <string name="enter_mobile_number_here">Enter Mobile Number here</string>
    <string name="enter_emai_here">Enter Emai here</string>
    <string name="next">NEXT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_the_received_otp_below">Enter the received OTP below :</string>
    <string name="enter_the_otp_here">Enter the OTP here</string>
    <string name="enter_new_password_here">Enter new Password here</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="my_profile">My Profile</string>
    <string name="about_app">About App</string>
    <string name="logout">Logout</string>
    <string name="faqs">FAQs</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="cost_high_to_low">Cost(High to Low)</string>
    <string name="cost_low_to_high">Cost(Low to High)</string>
    <string name="sort_by_rating">Sort by Rating</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="choose_from_menu_list_below">Choose from menu list below :</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="favourites_activity">Favourites Activity</string>
    <string name="proceed_to_cart">Proceed to Cart</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="name_of_the_dish">Name of The Dish</string>
    <string name="place_order_total_rs_470">Place Order(Total Rs. 0)</string>
    <string name="ordering_from_restaurant_name">Ordering From : ResTaurant Name</string>
    <string name="your_order_has_been_placed_successfully">Your Order has been successfully placed!</string>
    <string name="ok">OK</string>
    <string name="enter_your_user_id">Enter your User Id</string>
    <string name="forgot_user_id">Forgot User id ?</string>
    <string name="about_creator">About Creator</string>
</resources>