<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>
        <item
            android:id="@+id/favourites"
            android:title="@string/favourite_restaurants"
            android:icon="@drawable/ic_fav"/>
        <item
            android:id="@+id/MyProfile"
            android:title="@string/my_profile"
            android:icon="@drawable/ic_profile"/>
        <item
            android:id="@+id/AboutApp"
            android:title="@string/about_app"
            android:icon="@drawable/ic_about_app"/>
        <item
            android:id="@+id/AboutCreator"
            android:title="@string/about_creator"
            android:icon="@drawable/ic_app_creator"
            />
        <item
            android:id="@+id/faqs"
            android:title="@string/faqs"
            android:icon="@drawable/ic_faqs"/>
        <item
            android:id="@+id/Logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout"/>

    </group>

</menu>