<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff8f00"
    tools:context="com.atul.foodzone.activity.ForgotPassword">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgAppImage"
            android:layout_width="200dp"
            android:layout_height="170dp"
            android:src="@drawable/food_app"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:padding="6dp"/>
        <TextView
            android:id="@+id/txtInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_registered_mobile_number_and_the_registered_email_id_in_the_respective_blocks"
            android:layout_below="@id/imgAppImage"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="23sp"
            android:layout_margin="20dp"
            android:padding="4dp"
            />
        <EditText
            android:id="@+id/etMob"
            android:layout_below="@id/txtInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_mobile_number_here"
            android:textSize="20sp"
            android:inputType="phone"
            android:maxLines="1"
            android:maxLength="10"
            android:background="#ffffff"
            android:padding="4dp"
            android:layout_margin="20dp"
            android:textStyle="italic"
            android:drawableStart="@drawable/ic_mobile"
            android:drawablePadding="10dp"
            />
        <EditText
            android:id="@+id/etEmail"
            android:layout_below="@id/etMob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_emai_here"
            android:textStyle="italic"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:background="#ffffff"
            android:layout_margin="20dp"
            android:padding="4dp"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            />
        <Button
            android:id="@+id/btnNext"
            android:layout_below="@id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/next"
            android:drawableEnd="@drawable/ic_arrow"
            android:drawablePadding="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>


