<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c6ff00"
    tools:context="com.atul.foodzone.activity.RegisterActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <ImageView
                 android:id="@+id/imgLogoReg"
                 android:layout_below="@id/Toolbar"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:src="@drawable/food_app"
                 android:layout_centerHorizontal="true"
                 android:layout_margin="40dp"/>
             <EditText
                 android:id="@+id/etName"
                 android:layout_below="@id/imgLogoReg"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/enter_your_name_min_3_char"
                 android:textStyle="italic"
                 android:background="#ffffff"
                 android:inputType="text"
                 android:maxLines="1"
                 android:maxLength="50"
                 android:padding="4dp"
                 android:textSize="18sp"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
                 android:drawableStart="@drawable/ic_name"
                 android:drawablePadding="10dp"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="20dp"/>
             <EditText
                 android:id="@+id/etEmail"
                 android:layout_below="@id/etName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/enter_your_email"
                 android:textStyle="italic"
                 android:background="#ffffff"
                 android:drawableStart="@drawable/ic_email"
                 android:drawablePadding="10dp"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
                 android:padding="4dp"
                 android:textSize="18sp"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="20dp"/>
             <EditText
                 android:id="@+id/etMobNum"
                 android:layout_below="@id/etEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/enter_your_mobile_number"
                 android:textStyle="italic"
                 android:background="#ffffff"
                 android:padding="4dp"
                 android:inputType="phone"
                 android:maxLength="10"
                 android:maxLines="1"
                 android:drawablePadding="10dp"
                 android:drawableStart="@drawable/ic_mobile"
                 android:textSize="18sp"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="20dp"/>
             <EditText
                 android:id="@+id/etAddress"
                 android:layout_below="@id/etMobNum"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/enter_delivery_address"
                 android:textStyle="italic"
                 android:background="#ffffff"
                 android:inputType="text"
                 android:maxLines="3"
                 android:maxLength="200"
                 android:padding="4dp"
                 android:drawableStart="@drawable/ic_delivery"
                 android:drawablePadding="10dp"
                 android:textSize="18sp"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="20dp"/>
             <EditText
                 android:id="@+id/etPass"
                 android:layout_below="@id/etAddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/create_password_min_4_char"
                 android:textStyle="italic"
                 android:drawableStart="@drawable/ic_password"
                 android:drawablePadding="10dp"
                 android:background="#ffffff"
                 android:padding="4dp"
                 android:inputType="textPassword"
                 android:textSize="18sp"
                 android:maxLength="10"
                 android:maxLines="1"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="20dp"/>
             <EditText
                 android:id="@+id/etConPass"
                 android:layout_below="@id/etPass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawablePadding="10dp"
                 android:drawableStart="@drawable/ic_password_confirm"
                 android:hint="@string/confirm_password"
                 android:textStyle="italic"
                 android:background="#ffffff"
                 android:padding="4dp"
                 android:maxLength="10"
                 android:maxLines="1"
                 android:inputType="textPassword"
                 android:textSize="18sp"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="20dp"/>

             <Button
                 android:id="@+id/btnRegister"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/etConPass"
                 android:layout_marginTop="50dp"
                 android:layout_marginStart="50dp"
                 android:layout_marginEnd="50dp"
                 android:layout_centerHorizontal="true"
                 android:text="@string/register"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:background="#ff5722"
                 android:textColor="#ffffff"
                 android:layout_marginBottom="30dp"
                 android:padding="4dp"/>

             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/Toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 app:title="REGISTER YOURSELF"
                 android:hapticFeedbackEnabled="true"
                 android:focusableInTouchMode="true"
                 android:background="@color/colorPrimary"
                 app:titleTextColor="#ffffff"
                 android:layout_centerHorizontal="true"
                 app:titleMarginStart="100dp"
                 />

         </RelativeLayout>
    </ScrollView>
</RelativeLayout>